change bucket name

--- a/config/configs.json
+++ b/config/configs.json
@@ -8,25 +8,25 @@
         },
         {
             "name": "Taux_succes_2g",
-            "bucket": "success_rate",
+            "bucket": "successRate",
             "folder": "2g"
 
         },
         {
             "name": "Taux_succes_3g" ,
-            "bucket":"success_rate",
+            "bucket":"successRrate",
             "folder": "3g"
 
         },
         {
             "name": "Call_drop_2g",
-            "bucket": "call_drop",
+            "bucket": "callDrop",
             "folder": "2g"
 
         },
         {
             "name": "Call_drop_3g" ,
-            "bucket": "call_drop",
+            "bucket": "callDrop",
             "folder": "3g"
 
         }
