change bucket name

--- a/config/configs.json
+++ b/config/configs.json
@@ -8,25 +8,25 @@
         },
         {
             "name": "Taux_succes_2g",
-            "bucket": "successRate",
+            "bucket": "success-rate",
             "folder": "2g"
 
         },
         {
             "name": "Taux_succes_3g" ,
-            "bucket":"successRrate",
+            "bucket":"success-rate",
             "folder": "3g"
 
         },
         {
             "name": "Call_drop_2g",
-            "bucket": "callDrop",
+            "bucket": "call-drop",
             "folder": "2g"
 
         },
         {
             "name": "Call_drop_3g" ,
-            "bucket": "callDrop",
+            "bucket": "call-drop",
             "folder": "3g"
 
         }
