add ingest archive

--- a/config/configs.json
+++ b/config/configs.json
@@ -7,6 +7,12 @@
 
         },
         {
+            "name": "hourly_datas_radio_prod_archive" ,
+            "bucket": "trafic",
+            "folder": "trafic"
+
+        },
+        {
             "name": "Taux_succes_2g",
             "bucket": "success-rate",
             "folder": "2g"
