automatize ingest fait alarm

--- a/config/configs.json
+++ b/config/configs.json
@@ -28,15 +28,20 @@
             "name": "Call_drop_2g",
             "bucket": "call-drop",
             "folder": "2g"
-
         },
         {
             "name": "Call_drop_3g" ,
             "bucket": "call-drop",
             "folder": "3g"
 
+        },
+        {
+            "name":"faitalarme",
+            "bucket": "indisponibilite"
+    
         }
 
+    ],
 
-    ]
+    "data": "/home/yasmine/Documents/DATA354/ds54/apps/python/data"
 }
