automatize ingest fait alarm

--- a/config/configs.json
+++ b/config/configs.json
@@ -37,7 +37,8 @@
         },
         {
             "name":"faitalarme",
-            "bucket": "indisponibilite"
+            "bucket": "indisponibilite",
+            "folder": "indisponibilite"
     
         }
 
