--- a/config/configs.json
+++ b/config/configs.json
@@ -43,8 +43,8 @@
         },
         {
             "name":"ca&parc",
-            "bucket": "ca_parc",
-            "folder": "ca_parc"
+            "bucket": "ca-parc",
+            "folder": "ca-parc"
     
         }
 
