add validation on ingest ca & parc FTP

--- a/config/configs.json
+++ b/config/configs.json
@@ -44,7 +44,8 @@
         {
             "name":"ca&parc",
             "bucket": "ca-parc",
-            "folder": "ca-parc"
+            "folder": "ca-parc",
+            "columns": ["day_id", "id_site", "ca_voix", "ca_data", "parc_voix", "parc_data"]
     
         }
 
