add verif on ingest and clean bdd sites

--- a/config/configs.json
+++ b/config/configs.json
@@ -47,6 +47,27 @@
             "folder": "ca-parc",
             "columns": ["day_id", "id_site", "ca_voix", "ca_data", "parc_voix", "parc_data"]
     
+        },
+        {
+            "name":"BASE_SITES",
+            "bucket": "gpsoci",
+            "folder": "BASE_SITES",
+            "columns": ["site", "code oci", "autre code", "longitude", "latitude","type du site","statut" ,"commune", "departement","region", "localisation", "ville", "partenaire", "proprietaire", "gestionnaire", "type geolocalite", "position site", "projet"  ]
+    
+        },  
+        {
+            "name":"esco",
+            "bucket": "gpsoci",
+            "folder": "OPEX_ESCO",
+            "columns": ["day_id", "id_site", "ca_voix", "ca_data", "parc_voix", "parc_data"]
+    
+        },
+        {
+            "name":"ihs",
+            "bucket": "gpsoci",
+            "folder": "OPEX_IHS",
+            "columns": ["day_id", "id_site", "ca_voix", "ca_data", "parc_voix", "parc_data"]
+    
         }
 
     ],
