fix columns name

--- a/config/configs.json
+++ b/config/configs.json
@@ -52,7 +52,7 @@
             "name":"BASE_SITES",
             "bucket": "gpsoci",
             "folder": "BASE_SITES",
-            "columns": ["site", "code oci", "autre code", "longitude", "latitude","type du site","statut" ,"commune", "departement","region", "localisation", "ville", "partenaire", "proprietaire", "gestionnaire", "type geolocalite", "position site", "projet"  ]
+            "columns": ["site", "code oci", "autre code", "longitude", "latitude","type du site","statut" ,"commune", "departement","region", "localisation", "ville", "partenaires", "proprietaire", "gestionnaire", "type geolocalite", "position site", "projet"  ]
     
         },  
         {
