--- a/config/configs.json
+++ b/config/configs.json
@@ -56,17 +56,18 @@
     
         },  
         {
-            "name":"esco",
+            "name":"OPEX_ESCO",
             "bucket": "gpsoci",
             "folder": "OPEX_ESCO",
-            "columns": ["day_id", "id_site", "ca_voix", "ca_data", "parc_voix", "parc_data"]
+            "columns": ["code site oci", "code site", "nom du site", "o&m", "energy", "infra", "maintenance passive préventive", "gardes de sécurité", "discount", "total redevances ht", "tva : 18%", "total redevances ttc"]
     
         },
         {
-            "name":"ihs",
+            "name":"OPEX_IHS",
             "bucket": "gpsoci",
             "folder": "OPEX_IHS",
-            "columns": ["day_id", "id_site", "ca_voix", "ca_data", "parc_voix", "parc_data"]
+            "columns": ["site id ihs", "site name", "category", "trimestre 1 - ht"],
+            "sheets" : ["OCI-MLL", "OCI-COLOC", "OCI-PREST", "OCI-ATHENA", "OCI-BTS", "OCI-65"]
     
         }
 
