--- a/config/configs.json
+++ b/config/configs.json
@@ -73,5 +73,8 @@
     ],
 
     "data": "/home/yasmine/Documents/DATA354/ds54/apps/python/data",
-    "ftp_dir":"EXTRACT_VBM"
+    "ftp_dir":"EXTRACT_VBM",
+    "airflow_receivers": ["richmond.kongo@orange.com","assane.diop@orange.com","cyrille1.danho@orange.com"],
+    "api_mails": "http://10.242.36.139.sslip.io/api/alerting",
+    "api_params": "http://10.242.36.139.sslip.io/api/parametre"
 }
