first commit on dev

--- a/config/configs.json
+++ b/config/configs.json
@@ -3,63 +3,73 @@
         {
             "name": "hourly_datas_radio_prod" ,
             "bucket": "trafic",
-            "folder": "trafic"
+            "folder": "trafic",
+            "table": "trafic"
             
 
         },
         {
             "name": "hourly_datas_radio_prod_archive" ,
             "bucket": "trafic",
-            "folder": "trafic"
+            "folder": "trafic",
+            "table":"trafic"
 
         },
         {
             "name": "Taux_succes_2g",
             "bucket": "success-rate",
-            "folder": "2g"
+            "folder": "2g",
+            "table": "successrate"
 
         },
         {
             "name": "Taux_succes_3g" ,
             "bucket":"success-rate",
-            "folder": "3g"
+            "folder": "3g",
+            "table": "successrate"
 
         },
         {
             "name": "Call_drop_2g",
             "bucket": "call-drop",
-            "folder": "2g"
+            "folder": "2g",
+            "table": "calldrop"
         },
         {
             "name": "Call_drop_3g" ,
             "bucket": "call-drop",
-            "folder": "3g"
+            "folder": "3g",
+            "table": "calldrop"
 
         },
         {
             "name":"faitalarme",
             "bucket": "indisponibilite",
-            "folder": "indisponibilite"    
+            "folder": "indisponibilite",
+            "table": "indisponibilité"
         },
         {
             "name":"ca&parc",
             "bucket": "ca-parc",
             "folder": "ca-parc",
-            "columns": ["day_id", "id_site", "ca_voix", "ca_data", "parc_voix", "parc_data"]
+            "columns": ["day_id", "id_site", "ca_voix", "ca_data", "parc_voix", "parc_data"],
+            "table": "caparc"
     
         },
         {
             "name":"BASE_SITES",
             "bucket": "gpsoci",
             "folder": "BASE_SITES",
-            "columns": ["site", "code oci", "autre code", "longitude", "latitude","type du site","statut" ,"commune", "departement","region", "localisation", "ville", "partenaires", "proprietaire", "gestionnaire", "type geolocalite", "position site", "projet"  ]
+            "columns": ["site", "code oci", "autre code", "longitude", "latitude","type du site","statut" ,"commune", "departement","region", "localisation", "ville", "partenaires", "proprietaire", "gestionnaire", "type geolocalite", "position site", "projet"  ],
+            "table": "basesites"
     
         },  
         {
             "name":"OPEX_ESCO",
             "bucket": "gpsoci",
             "folder": "OPEX_ESCO",
-            "columns": ["code site oci", "code site", "nom du site", "o&m", "energy", "infra", "maintenance passive préventive", "gardes de sécurité", "discount", "total redevances ht", "tva : 18%", "total redevances ttc"]
+            "columns": ["code site oci", "code site", "nom du site", "o&m", "energy", "infra", "maintenance passive préventive", "gardes de sécurité", "discount", "total redevances ht", "tva : 18%", "total redevances ttc"],
+            "table": "esco"
     
         },
         {
@@ -67,7 +77,9 @@
             "bucket": "gpsoci",
             "folder": "OPEX_IHS",
             "columns": ["site id ihs", "site name", "category", "trimestre 1 - ht"],
-            "sheets" : ["OCI-MLL", "OCI-COLOC", "OCI-PREST", "OCI-ATHENA", "OCI-BTS", "OCI-65"]
+            "sheets" : ["OCI-MLL", "OCI-COLOC", "OCI-PREST", "OCI-ATHENA", "OCI-BTS", "OCI-65"],
+            "table": "ihs"
+
         }
 
     ],
