first commit on dev

--- a/config/configs.json
+++ b/config/configs.json
@@ -46,7 +46,7 @@
             "name":"faitalarme",
             "bucket": "indisponibilite",
             "folder": "indisponibilite",
-            "table": "indisponibilité"
+            "table": "indisponibilite"
         },
         {
             "name":"ca&parc",
