add clutter columns

--- a/config/configs.json
+++ b/config/configs.json
@@ -60,7 +60,7 @@
             "name":"BASE_SITES",
             "bucket": "gpsoci",
             "folder": "BASE_SITES",
-            "columns": ["site", "code oci", "autre code", "longitude", "latitude","type du site","statut" ,"commune", "departement","region", "localisation", "ville", "partenaires", "proprietaire", "gestionnaire", "type geolocalite", "position site", "projet"  ],
+            "columns": ["site", "code oci", "autre code", "longitude", "latitude","type du site","statut" ,"commune", "departement","region", "localisation", "ville", "partenaires", "proprietaire", "gestionnaire", "type geolocalite", "position site", "projet", "clutter"  ],
             "table": "basesites"
     
         },  
@@ -84,7 +84,7 @@
 
     ],
 
-    "data": "/home/yasmine/Documents/DATA354/ds54/apps/python/data",
+    "data": "/home/yasmine/Documents/DATA354/ds5vpn.orange-cit.ci:44434/apps/python/data",
     "ftp_dir":"EXTRACT_VBM",
     "airflow_receivers": ["richmond.kongo@orange.com","assane.diop@orange.com","cyrille1.danho@orange.com"],
     "api_mails": "http://10.242.36.139.sslip.io/api/alerting",
