rewrite and clean code of extraction

--- a/config/configs.json
+++ b/config/configs.json
@@ -43,7 +43,7 @@
         "table": "indisponibilite"
       },
       {
-        "name": "ca&parc",
+        "name": "caparc",
         "bucket": "ca-parc",
         "folder": "ca-parc",
         "columns": [
@@ -51,7 +51,7 @@
           "id_site",
           "ca_voix",
           "ca_data",
-          "parc_voix",
+          "parc",
           "parc_data"
         ],
         "table": "caparc"
