rewrite and clean extraction cde

--- a/config/configs.json
+++ b/config/configs.json
@@ -51,7 +51,7 @@
           "id_site",
           "ca_voix",
           "ca_data",
-          "parc",
+          "parc_voix",
           "parc_data"
         ],
         "table": "caparc"
