rewrite and cleaning esco cleaning code

--- a/config/configs.json
+++ b/config/configs.json
@@ -94,8 +94,8 @@
           "o&m",
           "energy",
           "infra",
-          "maintenance passive préventive",
-          "gardes de sécurité",
+          "maintenance passive preventive",
+          "gardes de securite",
           "discount",
           "total redevances ht",
           "tva : 18%",
