refactor my code

--- a/config/configs.json
+++ b/config/configs.json
@@ -153,5 +153,9 @@
     ],
     "api_mails": "http://10.242.36.139.sslip.io/api/alerting",
     "api_params": "http://10.242.36.139.sslip.io/api/parametre",
-    "date_format": "%Y-%m-%d"
+    "date_format": "%Y-%m-%d",
+    "intercos":  0.139,
+    "impot_taxe": 0.116 ,
+    "frais_distribution" :  0.09 ,
+    "seuil_rentabilite" : 0.8
   }
