--- a/config/configs.json
+++ b/config/configs.json
@@ -104,6 +104,26 @@
         "table": "esco"
       },
       {
+        "name": "ANNEXE_OPEX_ESCO",
+        "bucket": "gpsoci",
+        "folder": "ANNEXE_OPEX_ESCO",
+        "columns": [
+          "code site oci",
+          "code site",
+          "nom du site",
+          "o&m",
+          "energy",
+          "infra",
+          "maintenance passive preventive",
+          "gardes de securite",
+          "discount",
+          "total redevances ht",
+          "tva : 18%",
+          "total redevances ttc"
+        ],
+        "table": "esco"
+      },
+      {
         "name": "OPEX_IHS",
         "bucket": "gpsoci",
         "folder": "OPEX_IHS",
@@ -157,5 +177,5 @@
     "intercos":  0.139,
     "impot_taxe": 0.116 ,
     "frais_distribution" :  0.09 ,
-    "seuil_rentabilite" : 0.8
+    "seuil_rentabilite" : 0.65
   }
