change extraction start date to janvier

--- a/Pipfile
+++ b/Pipfile
@@ -17,6 +17,9 @@ pylint = "*"
 s3fs = "*"
 excel2json = "*"
 requests = "*"
+pyminio = "*"
+unidecode = "*"
+psycopg2-binary = "*"
 
 [dev-packages]
 
