--- a/config/configs.json
+++ b/config/configs.json
@@ -51,8 +51,13 @@
           "id_site",
           "ca_voix",
           "ca_data",
-          "parc_voix",
-          "parc_data"
+          "parc",
+          "parc_data",
+          "parc_2g",
+          "parc_3g",
+          "parc_4g",
+          "parc_5g",
+          "parc_other"
         ],
         "table": "caparc"
       },
