--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,5 +3,5 @@ FROM  yasminekd/airflow-sim:latest
 RUN pip install pyyaml && pip install pathlib && pip install pandas && \
     pip install minio && pip install setuptools && pip install python-dotenv && \
     pip install psycopg2 && pip install s3fs && pip install pyspark && pip install openpyxl \
-    pip install requests
+    pip install requests && pip install unidecode
 
