add ingestion trafic v2

--- a/config/configs.json
+++ b/config/configs.json
@@ -13,6 +13,13 @@
         "table": "trafic"
       },
       {
+        "name": "ks_tdb_radio_drsi",
+        "bucket": "trafic",
+        "folder": "trafic_v2",
+        "table": "trafic_v2"
+
+      },
+      {
         "name": "Taux_succes_2g",
         "bucket": "success-rate",
         "folder": "2g",
