--- a/config/configs.json
+++ b/config/configs.json
@@ -58,6 +58,9 @@
           "id_site",
           "ca_voix",
           "ca_data",
+          "ca_total",
+          "trafic_voix",
+          "trafic_data",
           "parc",
           "parc_data",
           "parc_2g",
