--- a/config/configs.json
+++ b/config/configs.json
@@ -20,6 +20,12 @@
 
       },
       {
+        "name": "ks_hebdo_tdb_radio_drsi",
+        "bucket": "weekly_congestion",
+        "folder": "weekly_congestion",
+        "table": "weekly_congestion"
+      },
+      {
         "name": "Taux_succes_2g",
         "bucket": "success-rate",
         "folder": "2g",
