--- a/config/configs.json
+++ b/config/configs.json
@@ -21,9 +21,9 @@
       },
       {
         "name": "ks_hebdo_tdb_radio_drsi",
-        "bucket": "weekly_congestion",
-        "folder": "weekly_congestion",
-        "table": "weekly_congestion"
+        "bucket": "wcongestion",
+        "folder": "wcongestion",
+        "table": "wcongestion"
       },
       {
         "name": "Taux_succes_2g",
