add trafic to daily dag

--- a/config/configs.json
+++ b/config/configs.json
@@ -26,6 +26,12 @@
         "table": "wcongestion"
       },
       {
+        "name": "ks_daily_tdb_radio_drsi",
+        "bucket": "dtrafic",
+        "folder": "dtrafic",
+        "table": "dtrafic"
+      },
+      {
         "name": "Taux_succes_2g",
         "bucket": "success-rate",
         "folder": "2g",
