add trafic to weekly

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ pathlib = "*"
 pandas = "*"
 minio = "*"
 setuptools = "*"
-apache-airflow = "*"
+apache-airflow = "2.7.0"
 python-dotenv = "*"
 psycopg2 = "*"
 pylint = "*"
@@ -20,6 +20,8 @@ requests = "*"
 pyminio = "*"
 unidecode = "*"
 psycopg2-binary = "*"
+numpy = "*"
+trino = "*"
 
 [dev-packages]
 
