add ca and parc validation

--- a/config/configs.json
+++ b/config/configs.json
@@ -204,5 +204,30 @@
     "intercos":  0.139,
     "impot_taxe": 0.116 ,
     "frais_distribution" :  0.09 ,
-    "seuil_rentabilite" : 0.65
+    "seuil_rentabilite" : 0.65,
+    "thresold":[{
+      "ca_total": { 
+        "min": 425072294.222149,
+        "max": 3398234863.35415
+      },
+      "ca_voix": { 
+        "min": 145257700.98205,
+        "max": 1549278313.29794
+      },
+      "ca_data": { 
+        "min": 154142028.60985,
+        "max": 1972334342.24778
+      },
+      "parc": { 
+        "min": 7000000,
+        "max": 17000000
+      },
+      "parc_data": { 
+        "min": 3000000,
+        "max": 9000000
+      }
+      
+      
+    }]
+    
   }
