new daily ingestion with validation : ca+bdd

--- a/config/configs.json
+++ b/config/configs.json
@@ -205,7 +205,7 @@
     "impot_taxe": 0.116 ,
     "frais_distribution" :  0.09 ,
     "seuil_rentabilite" : 0.65,
-    "thresold":[{
+    "thresold":{
       "ca_total": { 
         "min": 425072294.222149,
         "max": 3398234863.35415
@@ -225,9 +225,13 @@
       "parc_data": { 
         "min": 3000000,
         "max": 9000000
+      },
+      "sites_actifs": {
+        "min": 1950,
+        "max": 3600
       }
       
       
-    }]
+    }
     
   }
