add validation after merging

--- a/config/configs.json
+++ b/config/configs.json
@@ -222,6 +222,10 @@
         "min": 7000000,
         "max": 17000000
       },
+      "parc_global": { 
+        "min": 7000000,
+        "max": 17000000
+      },
       "parc_data": { 
         "min": 3000000,
         "max": 9000000
