new daily ingest flux with validation: trafic

--- a/config/configs.json
+++ b/config/configs.json
@@ -233,6 +233,14 @@
       "sites_actifs": {
         "min": 1950,
         "max": 3600
+      },
+      "trafic_voix": {
+        "min": 1447035.03867713,
+        "max": 5813359.7595367
+      },
+      "trafic_data": {
+        "min": 460000,
+        "max": 2600000
       }
       
       
