new daily ingest flux with validation: trafic

--- a/config/configs.json
+++ b/config/configs.json
@@ -234,11 +234,11 @@
         "min": 1950,
         "max": 3600
       },
-      "trafic_voix": {
+      "trafic_voix_erl": {
         "min": 1447035.03867713,
         "max": 5813359.7595367
       },
-      "trafic_data": {
+      "trafic_data_go": {
         "min": 460000,
         "max": 2600000
       }
