--- a/config/configs.json
+++ b/config/configs.json
@@ -2,68 +2,68 @@
     "tables": [
       {
         "name": "hourly_datas_radio_prod",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "trafic",
         "table": "trafic"
       },
       {
         "name": "hourly_datas_radio_prod_archive",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "trafic",
         "table": "trafic"
       },
       {
         "name": "ks_tdb_radio_drsi",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "trafic_v2",
         "table": "trafic_v2"
 
       },
       {
         "name": "ks_hebdo_tdb_radio_drsi",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "wcongestion",
         "table": "wcongestion"
       },
       {
         "name": "ks_daily_tdb_radio_drsi",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "dtrafic",
         "table": "dtrafic"
       },
       {
         "name": "Taux_succes_2g",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "successrate_2g",
         "table": "successrate"
       },
       {
         "name": "Taux_succes_3g",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "successrate_3g",
         "table": "successrate"
       },
       {
         "name": "Call_drop_2g",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "calldrop_2g",
         "table": "calldrop"
       },
       {
         "name": "Call_drop_3g",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "calldrop_3g",
         "table": "calldrop"
       },
       {
         "name": "faitalarme",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "indisponibilite",
         "table": "indisponibilite"
       },
       {
         "name": "caparc",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "ca-parc",
         "columns": [
           "day_id",
@@ -85,7 +85,7 @@
       },
       {
         "name": "BASE_SITES",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "BASE_SITES",
         "columns": [
           "site",
@@ -112,7 +112,7 @@
       },
       {
         "name": "OPEX_ESCO",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "OPEX_ESCO",
         "columns": [
           "code site oci",
@@ -132,7 +132,7 @@
       },
       {
         "name": "ANNEXE_OPEX_ESCO",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "ANNEXE_OPEX_ESCO",
         "columns": [
           "code site oci",
@@ -152,7 +152,7 @@
       },
       {
         "name": "OPEX_IHS",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "OPEX_IHS",
         "columns": [
           "site id ihs",
@@ -172,7 +172,7 @@
       },
       {
         "name": "CONGESTION",
-        "bucket": "motower",
+        "bucket": "motower_preprod",
         "folder": "CONGESTION",
         "columns": [
           "periode",
