all file reviewed

--- a/config/configs.json
+++ b/config/configs.json
@@ -196,7 +196,18 @@
     "airflow_receivers": [
       "richmond.kongo@orange.com",
       "assane.diop@orange.com",
-      "cyrille1.danho@orange.com"
+      "cyrille1.danho@orange.com",
+      "mohamed2.sylla@orange.com",
+      "amadou.diomande@orange.com",
+      "Jonas.kouame@orange.com",
+      "armand.kablan@orange.com",
+      "anicet.azombade@orange.com",
+      "etienne.kouadio@orange.com",
+      "bertine.kouakou@orange.com",
+      "florentine.kouakou@orange.com",
+      "ange.phaceli@orange.com",
+      "soulegame.soro@orange.com",
+      "innocent.yengo@orange.com"
     ],
     "api_mails": "http://10.242.36.139.sslip.io/api/alerting",
     "api_params": "http://10.242.36.139.sslip.io/api/parametre",
@@ -245,7 +256,21 @@
       
       
     },
-    "default_adress": ["jean-louis.gbadi@orange.com", "ListeAdminBIBigDATA.oci@orange.com"],    
+    "default_adress": ["jean-louis.gbadi@orange.com",   
+    "richmond.kongo@orange.com",
+    "assane.diop@orange.com",
+    "cyrille1.danho@orange.com",
+    "mohamed2.sylla@orange.com",
+    "amadou.diomande@orange.com",
+    "Jonas.kouame@orange.com",
+    "armand.kablan@orange.com",
+    "anicet.azombade@orange.com",
+    "etienne.kouadio@orange.com",
+    "bertine.kouakou@orange.com",
+    "florentine.kouakou@orange.com",
+    "ange.phaceli@orange.com",
+    "soulegame.soro@orange.com",
+    "innocent.yengo@orange.com"],    
     "output_tables": {
       "motower_monthly": {
                 "mois": "VARCHAR",
