all file reviewed

--- a/config/configs.json
+++ b/config/configs.json
@@ -389,7 +389,8 @@
                 "nur_3g_v2": "FLOAT", 
                 "nur_4g_v2": "FLOAT", 
                 "nur_total_v2": "FLOAT", 
-                "previous_segment": "VARCHAR" 
+                "previous_segment": "VARCHAR" ,
+                "evolution_segment": "INTEGER"
       },
       "motower_daily_caparc": { 
                 "jour": "date", 
@@ -428,7 +429,8 @@
                 "ca_mtd": "FLOAT", 
                 "ca_norm": "FLOAT", 
                 "segment": "VARCHAR", 
-                "previous_segment": "VARCHAR" 
+                "previous_segment": "VARCHAR" ,
+                "evolution_segment": "INTEGER"
               },
       "motower_daily_congestion": { 
               "jour": "date", 
