--- a/config/configs.json
+++ b/config/configs.json
@@ -216,7 +216,7 @@
     "impot_taxe": 0.116 ,
     "frais_distribution" :  0.09 ,
     "seuil_rentabilite" : 0.65,
-    "thresold":{
+    "threshold":{
       "ca_total": { 
         "min": 425072294.222149,
         "max": 3398234863.35415
