--- a/config/configs.json
+++ b/config/configs.json
@@ -191,6 +191,8 @@
         "table": "congestion"
       }
     ],
+    "final_bucket": "motower",
+    "final_folder": "oneforall",
     "data": "/home/yasmine/Documents/DATA354/ds5vpn.orange-cit.ci:44434/apps/python/data",
     "ftp_dir": "EXTRACT_VBM",
     "airflow_receivers": [
