modification de la source de données ftp en postgres

--- a/config/configs.json
+++ b/config/configs.json
@@ -62,25 +62,9 @@
         "table": "indisponibilite"
       },
       {
-        "name": "caparc",
+        "name": "dtm_motower_gsm",
         "bucket": "motower",
         "folder": "ca-parc",
-        "columns": [
-          "day_id",
-          "id_site",
-          "ca_voix",
-          "ca_data",
-          "ca_total",
-          "trafic_voix",
-          "trafic_data",
-          "parc",
-          "parc_data",
-          "parc_2g",
-          "parc_3g",
-          "parc_4g",
-          "parc_5g",
-          "parc_other"
-        ],
         "table": "caparc"
       },
       {
