--- a/config/configs.json
+++ b/config/configs.json
@@ -62,9 +62,25 @@
         "table": "indisponibilite"
       },
       {
-        "name": "dtm_motower_gsm",
+        "name": "caparc",
         "bucket": "motower",
         "folder": "ca-parc",
+        "columns": [
+          "day_id",
+          "id_site",
+          "ca_voix",
+          "ca_data",
+          "ca_total",
+          "trafic_voix",
+          "trafic_data",
+          "parc",
+          "parc_data",
+          "parc_2g",
+          "parc_3g",
+          "parc_4g",
+          "parc_5g",
+          "parc_other"
+        ],
         "table": "caparc"
       },
       {
@@ -259,12 +275,12 @@
     "innocent.yengo@orange.com"],    
     "output_tables": {
       "motower_monthly": {
-                "mois": "VARCHAR",                
-                "code_oci": "VARCHAR", 
+                "mois": "VARCHAR",
+                "code_oci": "VARCHAR",
                 "site":  "VARCHAR",
                 "autre_code": "VARCHAR",
                 "longitude": "VARCHAR",
-                "latitude": "VARCHAR",              
+                "latitude": "VARCHAR",
                 "type_du_site": "VARCHAR",
                 "statut": "VARCHAR",
                 "localisation": "VARCHAR",
@@ -283,7 +299,7 @@
                 "parc_global": "INTEGER",
                 "parc_data": "INTEGER",
                 "parc_2g": "INTEGER",
-                "parc_3g": "INTEGER",   
+                "parc_3g": "INTEGER", 
                 "parc_4g": "INTEGER", 
                 "parc_5g": "INTEGER", 
                 "autre_parc": "INTEGER", 
@@ -295,30 +311,67 @@
                 "discount": "FLOAT", 
                 "volume_discount": "FLOAT", 
                 "tva": "FLOAT", 
-                "opex_itn": "FLOAT",                   
+                "opex_itn": "FLOAT", 
+                "delay_2g": "FLOAT", 
+                "delay_3g": "FLOAT", 
+                "delay_4g": "FLOAT", 
+                "delaycellule_2g": "FLOAT", 
+                "delaycellule_3g": "FLOAT", 
+                "delaycellule_4g": "FLOAT", 
+                "nbrecellule_2g": "INTEGER", 
+                "nbrecellule_3g": "INTEGER", 
+                "nbrecellule_4g": "INTEGER", 
+                "trafic_voix_2g": "FLOAT", 
+                "trafic_voix_3g": "FLOAT", 
+                "trafic_voix_4g": "FLOAT", 
+                "trafic_data_2g": "FLOAT", 
+                "trafic_data_3g": "FLOAT", 
+                "trafic_data_4g": "FLOAT", 
                 "trafic_data_v2_2g": "FLOAT", 
                 "trafic_data_v2_3g": "FLOAT", 
                 "trafic_data_v2_4g": "FLOAT", 
                 "trafic_voix_v2_2g": "FLOAT", 
                 "trafic_voix_v2_3g": "FLOAT", 
                 "trafic_voix_v2_4g": "FLOAT", 
+                "cellules_2g_congestionnees": "INTEGER", 
+                "cellules_2g": "INTEGER", 
+                "cellules_3g_congestionnees": "INTEGER", 
+                "cellules_3g": "INTEGER", 
+                "cellules_4g_congestionnees": "INTEGER", 
+                "cellules_4g": "INTEGER", 
                 "cellules_v2_2g": "INTEGER", 
                 "cellules_congestionne_v2_2g": "INTEGER", 
                 "cellules_v2_3g": "INTEGER", 
                 "cellules_congestionne_v2_3g": "INTEGER", 
                 "cellules_v2_4g": "INTEGER", 
                 "cellules_congestionne_v2_4g": "INTEGER", 
+                "avg_cssr_cs_2g": "FLOAT", 
+                "avg_cssr_cs_3g": "FLOAT", 
+                "trafic_voix_total": "FLOAT", 
+                "trafic_data_total": "FLOAT", 
                 "ca_total": "FLOAT", 
                 "segment": "VARCHAR", 
                 "pareto": "BOOLEAN", 
+                "cellules_congestionnees_total": "INTEGER", 
                 "cellules_congestionnees_total_v2": "INTEGER", 
+                "cellules_total": "INTEGER", 
                 "cellules_total_v2": "INTEGER", 
+                "taux_congestion_2g": "FLOAT", 
+                "taux_congestion_3g": "FLOAT", 
+                "taux_congestion_4g": "FLOAT", 
+                "taux_congestion_total": "FLOAT", 
                 "taux_congestion_2g_v2": "FLOAT", 
                 "taux_congestion_3g_v2": "FLOAT", 
                 "taux_congestion_4g_v2": "FLOAT", 
                 "taux_congestion_total_v2": "FLOAT", 
+                "recommandation": "VARCHAR", 
                 "recommandation_v2": "VARCHAR", 
                 "arpu": "FLOAT", 
+                "cssr_pondere_trafic_2g": "FLOAT", 
+                "cssr_pondere_trafic_3g": "FLOAT", 
+                "cssr_pondere_trafic_2g_v2": "FLOAT", 
+                "cssr_pondere_trafic_3g_v2": "FLOAT", 
+                "segmentation_rentabilite": "VARCHAR", 
                 "segmentation_rentabilite_v2": "VARCHAR", 
                 "interco": "FLOAT", 
                 "impot": "FLOAT", 
@@ -329,7 +382,15 @@
                 "marge_ca": "FLOAT", 
                 "rentable": "BOOLEAN", 
                 "niveau_rentabilite": "VARCHAR", 
-                "days": "INTEGER",  
+                "days": "INTEGER", 
+                "nur_2g": "FLOAT", 
+                "nur_3g": "FLOAT", 
+                "nur_4g": "FLOAT", 
+                "nur_total": "FLOAT", 
+                "nur_2g_v2": "FLOAT", 
+                "nur_3g_v2": "FLOAT", 
+                "nur_4g_v2": "FLOAT", 
+                "nur_total_v2": "FLOAT", 
                 "previous_segment": "VARCHAR" ,
                 "evolution_segment": "INTEGER"
       },
