push de mes job avant modification des valeurs de validation du CA

--- a/config/configs.json
+++ b/config/configs.json
@@ -62,8 +62,28 @@
         "table": "indisponibilite"
       },
       {
+        "name": "caparc",
+        "bucket": "ca-parc",
+        "folder": "ca-parc",
+        "columns": [
+          "day_id",
+          "id_site",
+          "ca_voix",
+          "ca_data",
+          "parc",
+          "parc_data",
+          "parc_2g",
+          "parc_3g",
+          "parc_4g",
+          "parc_5g",
+          "parc_other"
+        ],
+        "table": "caparc"
+      },
+
+      {
         "name": "dtm_motower_gsm",
-        "bucket": "motower",
+        "bucket": "ca-parc",
         "folder": "ca-parc",
         "table": "caparc"
       },
@@ -224,7 +244,7 @@
         "max": 17000000
       },
       "parc_data": { 
-        "min": 3000000,
+        "min": 3000000,   
         "max": 9000000
       },
       "sites_actifs": {
