ajustement des colones dans config pour ca-parc

--- a/config/configs.json
+++ b/config/configs.json
@@ -63,13 +63,16 @@
       },
       {
         "name": "caparc",
-        "bucket": "ca-parc",
+        "bucket": "motower",
         "folder": "ca-parc",
         "columns": [
           "day_id",
           "id_site",
           "ca_voix",
           "ca_data",
+          "ca_total",
+          "trafic_voix_in",
+          "trafic_data_in",
           "parc",
           "parc_data",
           "parc_2g",
@@ -83,7 +86,7 @@
 
       {
         "name": "dtm_motower_gsm",
-        "bucket": "ca-parc",
+        "bucket": "motower",
         "folder": "ca-parc",
         "table": "caparc"
       },
@@ -244,8 +247,8 @@
         "max": 17000000
       },
       "parc_data": { 
-        "min": 3000000,   
-        "max": 9000000
+        "min": 0, 
+        "max": 9999000000
       },
       "sites_actifs": {
         "min": 1950,
@@ -423,3 +426,4 @@
 
     
   }
+
